# Daily-DSA

./: .flake8  .gitignore  .pylintrc  License.txt  README.md  pyproject.toml
.github/workflows/: python-ci.yml
Arrays/: Addition of array.py  Array Duplicates.py  Array Subset.py  Chocolate Distribution Problem.py  Common in 3 Sorted Arrays.py  Count Inversions.py  Factorials of large numbers.py  Kadane's Algorithm.py  Kth Largest.py  Kth Smallest.py  Longest Consecutive Subsequence.py  Maximum Product Subarray.py  Median of 2 Sorted Arrays of Different Sizes.py  Median of an Array.py  Merge Without Extra Space.py  Min and Max in Array.py  Minimize the Heights.py  Minimum Jumps.py  Minimum swaps and K together.py  More than n div k Occurrences.py  Move all negative elements to end.py  Next Permutation.py  Occurence.py  Overlapping Intervals.py  Palindromic Array.py  Rearrange Array Alternately.py  Reverse a String.py  Rotate Array by One.py  Smallest subarray with sum greater than x.py  Sort 0s, 1s and 2s.py  Stock Buy and Sell – Max K Transactions Allowed.py  Stock buy and sell.py  Subarray with 0 sum.py  Three way partitioning.py  Trapping Rain Water.py  Triplet Sum in Array.py  Two sum pairs.py  Union of Arrays with Duplicates.py
Arrays/More than n/: k Occurrences.py
Matrix/: Max rectangle.py  Median in a row-wise sorted Matrix.py  Rotate by 90 degree.py  Row with max 1s.py  Search in a sorted Matrix..py  Sorted matrix.py  Spirally traversing a matrix.py
Strings/: Palindrome String.py
